--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,8 +25,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: ls
+        run: ls
+
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
