--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: selease
+name: release
 
 # Controls when the action will run. 
 on:
@@ -23,14 +23,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+    
       # Runs a single command using the runners shell
       - name: ls
         run: ls
-
-
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name:release
         run: |
-          echo Add other actions to build,
           echo test, and deploy your project.
+          - uses: actions/javascript-action@v1
