--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,18 +17,25 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    name:create release
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      -name:checkout
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - uses: actions/javascript-action@v1
-      # Runs a single command using the runners shell
-      - name: ls
-        run: ls
+       uses: actions/checkout@v2
+      -name:create Release
+       uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+               new release
+          draft: false
+          prerelease: false
+
       # Runs a set of commands using the runners shell
-      - name:release
-        run: |
-          echo test, and deploy your project.
          
