--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,24 +6,20 @@ name: release
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
-  pull_request:
+    tags:
+        - 'v*'
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name:Create Releaase
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    name:create release
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+     - name: Checkout code
+        uses: actions/checkout@v2
       -name:create Release
-        id:create_release
+        id:1
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
