--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,35 +1,23 @@
-# This is a basic workflow to help you get started with Actions
-
 name: release
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    tags:
-        - 'v*'
     branches: [ main ]
-
-  workflow_dispatch:
-name:Create Releaase
+    workflow_dispatch: true
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
      - name: Checkout code
         uses: actions/checkout@v2
-      -name:create Release
-        id:1
+     - name: create Release
+        id: 1
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: 1.0
-          release_name:test
-          body: |
-               new release
+          release_name: test
+          #|
+          body: new release
           draft: false
           prerelease: false
-
-      # Runs a set of commands using the runners shell
-         
