--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,23 +1,12 @@
 name: release
 on:
-  push:
-    branches: [ main ]
-    workflow_dispatch: true
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-     - name: Checkout code
-       uses: actions/checkout@v2
-     - name: create Release
-       id: testid
-       uses: actions/create-release@v1
-       env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       with:
-           tag_name: 1.0
-           release_name: test
-           #|
-           body: new release
-           draft: false
-           prerelease: false
+    push:
+        branches: [main]
+# jobs:
+#   build:
+# runs-on: ubuntu-latest# steps:
+#    -name: Checkout code
+#    uses: actions/checkout@v2
+#  - name: create Release
+#        draft: false
+#        prerelease: false
