--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,31 +2,31 @@ name: release
 on:
     push:
         branches: [ main ]
-        workflow_dispatch: true
+        #workflow_dispatch: true
 jobs:
-    build:
-        runs-on: ubuntu-latest
-    steps:
-        -name: Checkout code
-            uses: actions/checkout@v2
-        -name: create Releases
-            id: testid
-            uses: actions/create-release@v1
-            env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                with:
-                    tag_name: 1.0
-                    release_name: test
-           body: new release
-           draft: false
-           prerelease: false
-        -name: Upload Release Asset
-            id: upload-release-asset
-            uses: actions/upload-release-asset@v1
-            env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                with:
-                    upload_url: ${{ steps.create_release.outputs.upload_url }}
-                    asset_path: ./README.md
-          asset_name: readme.md
-          asset_content_type: application/text
+     build:
+         runs-on: ubuntu-latest
+    # steps:
+    #     -name: Checkout code 
+    #     #uses:actions/checkout@v2
+    #     -name:create Releases
+    #         id: testid
+    #         uses: actions/create-release@v1
+    #         env:
+    #             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #             with:
+    #                 tag_name: 1.0
+    #                 release_name: test
+    #        body: new release
+    #        draft: false
+    #        prerelease: false
+    #     -name: Upload Release Asset
+    #         id: upload-release-asset
+    #         uses: actions/upload-release-asset@v1
+    #         env:
+    #             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #             with:
+    #                 upload_url: ${{ steps.create_release.outputs.upload_url }}
+    #                 asset_path: ./README.md
+    #       asset_name: readme.md
+    #       asset_content_type: application/text
