--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,13 +4,13 @@ on:
         branches: [ main ]
         #workflow_dispatch: true
 jobs:
-     build:
-         runs-on: ubuntu-latest
-    # steps:
-    #     -name: Checkout code 
-    #     #uses:actions/checkout@v2
-    #     -name:create Releases
-    #         id: testid
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - name: checkout
+              uses: actions/checkout@v2
+      #      - name: create Releases
+     #       id: testid
     #         uses: actions/create-release@v1
     #         env:
     #             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
