--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,17 +9,17 @@ jobs:
         steps:
             - name: checkout
               uses: actions/checkout@v2
-      #      - name: create Releases
-     #       id: testid
-    #         uses: actions/create-release@v1
-    #         env:
-    #             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #             with:
-    #                 tag_name: 1.0
-    #                 release_name: test
-    #        body: new release
-    #        draft: false
-    #        prerelease: false
+            - name: create Releases
+              id: testid
+              uses: actions/create-release@v1
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                tag_name: 1.0
+                release_name: test
+                body: new release
+                draft: false
+                prerelease: false
     #     -name: Upload Release Asset
     #         id: upload-release-asset
     #         uses: actions/upload-release-asset@v1
