--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ jobs:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                 tag_name: ${{ github.ref }}
-                release_name: test
+                release_name: test2
                 body: new release
                 draft: false
                 prerelease: false
