--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,8 @@ jobs:
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                tag_name: ${{ github.ref }}
+                tag_name: changed release_name
+                #tag_name: ${{ github.ref }}
                 release_name: test2
                 body: new release
                 draft: false
