--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,12 +10,12 @@ jobs:
             - name: checkout
               uses: actions/checkout@v2
             - name: create Releases
-              id: testid
+              id: testid2
               uses: actions/create-release@v1
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                tag_name: changed release_name
+                tag_name: release_name
                 #tag_name: ${{ github.ref }}
                 release_name: test2
                 body: new release
